# news

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/api/: serializers.py  urls.py  views.py
apps/news/: admin.py  apps.py  models.py  urls.py  views.py
apps/news/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/news/: delete.html  detail.html  form.html  list.html
